# embedded-app-template

./: .clangd  CMakeLists.txt
docs/: maintainer-guide.md
main/: ApplicationContext.hpp  CMakeLists.txt
main/app_files/: AppFileTable.cpp
